# code-collection

./: .gitignore  README.md
code/api-example-django/: README.md
code/api-example-django/project/gtrends/: urls.py
code/client-side-sentiment-analysis/: README.md  index.html  package-lock.json  package.json
code/client-side-sentiment-analysis/src/: App.jsx  index.css
code/comparison-forecasting-libraries/: README.md  pyproject.toml
code/django-forecasting-api/: README.md  pyproject.toml
code/django-forecasting-api/project/gtrends/: apps.py  views.py
code/django-forecasting-api/project/gtrends/services/: ml.py  preprocessing.py
code/django-forecasting-api/project/gtrends/services/pipelines/: __init__.py  inference_pipeline.py
code/django-forecasting-api/project/gtrends/services/tasks/: save_mlmodelversion.py
code/django-forecasting-api/project/project/: settings.py
code/go-timeseries-api/: go.sum  main.go
code/go-timeseries-api/database/: database.go
code/go-timeseries-api/handlers/: timeseries.go
code/go-timeseries-api/stats/: stats.go
code/scraping-gpt-googlesearch/: pyproject.toml
code/why-backtesting-matters/: README.md  why_backtesting_matters.ipynb
examples/: Horizon as a Feature.ipynb  Local vs Global Forecasting.ipynb  Quantile Matching.ipynb  Why Backtesting Matters.ipynb
examples/api-example-django/: Dockerfile  README.md  docker-compose.yml
examples/api-example-django/project/gtrends/: models.py  serializers.py
examples/api-example-django/project/project/: urls.py
examples/go-timeseries-api/: .dockerignore  Dockerfile  README.md  go.mod  main.go
examples/go-timeseries-api/handlers/: routes.go  stats.go  timeseriesvalues.go
examples/go-timeseries-api/models/: models.go
examples/go-timeseries-api/stats/: stats.go
examples/horizon-as-a-feature/: README.md  horizon_as_a_feature.ipynb
examples/local-vs-global-forecasting/: README.md  pyproject.toml
examples/quantile-matching/: README.md
examples/scraping-gpt-googlesearch/: README.md  scraping_with_llm_and_google_search.ipynb
(+8 files in other folders)
