[tool.poetry]
name = "comparison-forecasting-libraries"
version = "0.1.0"
description = ""
authors = ["Davide <davide.burba@hotmail.com>"]
readme = "README.md"
packages = [{include = "comparison_forecasting_libraries"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
darts = "^0.27.2"
gluonts = "^0.14.3"
sktime = "^0.25.0"
ipykernel = "^6.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
